# Projekt_Metody_Programowania_2026

./: .clang-format  .clang-tidy  .clangd  .gitignore  Projekt_4_wymagania.md  README.md  TicTacToe.puml  meson.build  meson.options  native.ini
src/: board.cpp  board.h  boardExt.h  main.cpp  meson.build  minMaxStrategy.cpp  move.cpp  myexceptions.cpp
src/lib/: alphaBetaStrategy.cpp  alphaBetaStrategy.h  board.cpp  board.h  boardExt.cpp  boardExt.h  minMaxStrategy.cpp  minMaxStrategy.h  move.cpp  move.h  myexceptions.h  strategy.cpp  strategy.h  ticTacToeGame.cpp  ticTacToeGame.h  utils.h
tests/: meson.build  test_board.cpp  test_game.cpp  test_move.cpp  test_strategies.cpp
